# fcitx5-ipa-sil

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  ipa-sil-addon.conf  ipa-sil-addon.conf.in  ipa-sil.conf  ipa-sil.cpp  ipa-sil.hpp  ipa-sil.txt
